--- a/templates/base.html
+++ b/templates/base.html
@@ -17,12 +17,13 @@
             <ul class="nav navbar-nav flex-row float-right">
                 {% if 'user_id' in session %}
                 <li class="nav-item">
-                    <a class="btn btn-lg btn-warning" href="/">Dream it!</a>
+                    <a class="nav-link text-light" href="{{ url_for('show_user', user_id=session['user_id']) }}">
+                        <i class="fas fa-user-circle fa-2x"></i> {{ session['username'] }}
+                    </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link pr-3 text-light ml-3" href="/logout">Logout</a>
+                    <a class="nav-link pr-3 text-light ml-4" href="/logout">Logout</a>
                 </li>
-
                 {% else %}
                 <li class="nav-item">
                     <a class="nav-link pr-3 text-light" href="/login">Login</a>
