--- a/templates/dreams/submit_dream.html
+++ b/templates/dreams/submit_dream.html
@@ -38,5 +38,6 @@ Submit Dream
     </div>
   </div>
 {% endif %}
+<script src="{{ url_for('static', filename='js/submit_dream.js') }}"></script>
 
 {% endblock %}
