--- a/templates/base.html
+++ b/templates/base.html
@@ -5,9 +5,9 @@
     <title>
         Dreamer &ndash; {% block title %}{% endblock %}
     </title>
+    <link rel="icon" href="{{ url_for('static', filename='img/favicon.png') }}" type="image/png">
     <link rel="stylesheet" href="https://bootswatch.com/4/flatly/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.0/css/all.min.css">
-
 </head>
 
 <body>
