--- a/templates/dreams/submit_dream.html
+++ b/templates/dreams/submit_dream.html
@@ -14,7 +14,7 @@ Submit Your Dream
   🌜 Please type a night dream that you had recently, or a dream you want to understand. 🌜 
 </p>
 
-<form method="POST">ß
+<form method="POST">
 
   {{ form.hidden_tag() }}
   {% for field in form if field.widget.input_type != 'hidden' %}
